<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">1453866754846254</string>
    <string name="app_name">Base Two</string>
    <string name="main_menu_activity_title">Base Two</string>
    <string name="stats_activity_title">Statistics</string>
    <string name="instructions_activity_title">Instructions</string>
    <string name="level_select_activity_title">Choose Level</string>
    <string name="game_activity_title">Base Two</string>
    <string name="action_settings">Settings</string>
    <string name="level_beginner">Easy</string>
    <string name="level_inter">Intermedaite</string>
    <string name="level_tri">Trimediate</string>
    <string name="level_hex">Hexamediate</string>
    <string name="level_expert">Expert</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_instructions">Instructions</string>
    <string name="menu_levels">Levels</string>
    <string name="menu_play">Play</string>
    <string name="score_header">SCORE</string>

</resources>
