<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0095D9"
    android:orientation="vertical"
    tools:context=".LevelSelectActivity" >
    
    <ImageView 
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/title"
        />

    <Button
        android:id="@+id/quit_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button"
        android:text="@string/menu_quit"
        android:textSize="18sp"
        android:onClick="quitApp"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/stats_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_above="@+id/quit_btn"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:onClick="showStats"
        android:text="@string/menu_stats"
        android:textSize="18sp"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/instructions_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_above="@+id/stats_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button"
        android:onClick="showInstructions"
        android:text="@string/menu_instructions"
        android:textSize="18sp"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/levels_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_above="@+id/instructions_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button"
        android:onClick="showLevels"
        android:text="@string/menu_levels"
        android:textSize="18sp"
        android:textColor="#ffffff" />
    
    <Button
        android:id="@+id/play_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_above="@+id/levels_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button"
        android:onClick="playGame"
        android:text="@string/menu_play"
        android:textSize="18sp"
        android:textColor="#ffffff" />

</RelativeLayout>
